# ads

./: CMakeLists.txt  dynamic.h  dynamic_development.h  heap_sort.h  insertion_sort.h  main.cpp  pqueue.h
